playground/notas_tests/invalid/blk-04.hulk
let x = {0;1} in print(x);
